# ds_c

./: .gitignore  .vimrc  1  CMakeLists.txt  README.md  bb
.cache/clangd/index/: queue_with_stack.c.D4B69E62643A825A.idx  queue_with_stack.h.4EA395101C7AADB1.idx  squeue.c.51D6D08A59F78CB5.idx  squeue.h.E70C687D5A99B898.idx  stack.c.DECFFDC8B15C2B3C.idx  stack.h.BBC69BD75F285DBF.idx  t_queue_with_stack.c.8E94160D864E3AB8.idx  t_squeue.c.39DAD8503712B792.idx
src/: CMakeLists.txt  main.c
src/includes/: amqueue.h  bst.h  fsqueue.h  gmqueue.h  main.h  queue.h  queue_with_stack.h  sl_list.h  squeue.h  stack.h  tree.h
src/queue/: TODO.md  queue.c
src/queue_using_stack/: amqueue.c  fsqueue.c  squeue.c
src/queue_with_get_min/: gmqueue.c
src/queue_with_stack/: queue_with_stack.c
src/sl_list/: TODO.md  sl_list.c
src/stack/: .stack.c.swp  TODO.md  stack.c
src/tree/: bst.c  tree.c
test/: CMakeLists.txt
test/queue/: CMakeLists.txt  t_queue.c
test/queue_using_stack/: CMakeLists.txt  t_amqueue.c  t_fsqueue.c  t_squeue.c
test/queue_with_get_min/: CMakeLists.txt  t_gmqueue.c
test/queue_with_stack/: CMakeLists.txt  t_queue_with_stack.c
test/sl_list/: CMakeLists.txt  t_sl_list.c
test/stack/: .t_stack.c.swp  CMakeLists.txt  t_stack.c
test/tree/: CMakeLists.txt  t_bst.c  t_tree.c
